<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="toast_message_please_select_the_file_to_download">
        Please select the file to download
    </string>

    <string name="glide_download_option_label">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_download_option_label">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_download_option_label">Retrofit - Type-safe HTTP client
        for Android and Java by Square, Inc.</string>
    <string name="glide_download_link">https://github.com/bumptech/glide/archive/refs/heads/master.zip</string>
    <string name="load_app_download_link">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/refs/heads/master.zip</string>
    <string name="retrofit_download_link">https://github.com/square/retrofit/archive/refs/heads/master.zip</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">download_channel</string>
    <string name="notification_channel_name" translatable="true">Download</string>
    <string name="download_notification_channel_description">Download status reminder</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name_label">File name:</string>
    <string name="status_label">Status:</string>
    <string name="downloading_from_cloud">An image of a cloud and a down arrow inside it representing downloading from cloud</string>
</resources>
